--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,6 +71,11 @@
          <artifactId>httpclient</artifactId>
          <version>4.2.5</version>
       </dependency>
+      <dependency>
+         <groupId>org.directwebremoting</groupId>
+         <artifactId>dwr</artifactId>
+         <version>2.0.9</version>
+      </dependency>
    </dependencies>
 
    <build>
