--- a/server/src/main/webapp/WEB-INF/web.xml
+++ b/server/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,33 @@
    </servlet>
    <servlet-mapping>
       <servlet-name>jersey-serlvet</servlet-name>
-      <url-pattern>/*</url-pattern>
+      <url-pattern>/api/*</url-pattern>
    </servlet-mapping>
+
+ <servlet>
+    <servlet-name>dwr-invoker</servlet-name>
+    <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
+
+    <!-- This should NEVER be present in live -->
+    <init-param>
+      <param-name>debug</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+     <param-name>jsonpEnabled</param-name>
+     <param-value>true</param-value>
+    </init-param>
+    <init-param>
+          <param-name>crossDomainSessionSecurity</param-name>
+          <param-value>false</param-value>
+    </init-param> 
+
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>dwr-invoker</servlet-name>
+    <url-pattern>/dwr/*</url-pattern>
+  </servlet-mapping>
+   
 </web-app>
